syntax = "proto3";

package taskmanager;

service TaskManager {
  rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse);
  rpc ListAllTasks (ListAllTasksRequest) returns (ListAllTasksResponse);
  rpc ListTask (ListTaskRequest) returns (ListTaskResponse);
  rpc DeleteTask (DeleteTaskRequest) returns (DeleteTaskResponse);
  rpc UpdateTask (UpdateTaskRequest) returns (UpdateTaskResponse);
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
  string parentId = 3;
}

message CreateTaskResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  string parentId = 4;
  string createdAt = 5;
  string updatedAt = 6;
}

message ListAllTasksRequest {
  int32 page = 1;
  int32 pageSize = 2;
}

message ListAllTasksResponse {
  repeated Task tasks = 1;
  int32 totalCount = 2;
}

message ListTaskRequest {
  string id = 1;
}

message ListTaskResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  string parentId = 4;
  string createdAt = 5;
  string updatedAt = 6;
}

message DeleteTaskRequest {
  string id = 1;
}

message DeleteTaskResponse {
  string id = 1;
}

message UpdateTaskRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  string parentId = 4;
}

message UpdateTaskResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  string parentId = 4;
  string createdAt = 5;
  string updatedAt = 6;
}

message Task {
  string id = 1;
  string title = 2;
  string description = 3;
  string parentId = 4;
  string createdAt = 5;
  string updatedAt = 6;
}
